// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should index new markdown files 1`] = `
[
  {
    "contextualizedText": "<context>
# Test Document

Context for test document
</context>


This is test content.",
    "filename": "test.md",
    "text": "
This is test content.",
  },
]
`;

exports[`should only re-embed changed chunks when file content changes > after initial indexing 1`] = `
[
  {
    "contextualizedText": "<context>
# Section One

Section one introduces the document
</context>


This is the first section content.
",
    "filename": "test.md",
    "text": "
This is the first section content.
",
  },
  {
    "contextualizedText": "<context>
# Section Two

Section two provides secondary content
</context>


This is the second section content.
",
    "filename": "test.md",
    "text": "
This is the second section content.
",
  },
  {
    "contextualizedText": "<context>
# Section Three

Section three concludes the document
</context>


This is the third section content.",
    "filename": "test.md",
    "text": "
This is the third section content.",
  },
]
`;

exports[`should only re-embed changed chunks when file content changes > after modifying section two 1`] = `
[
  {
    "contextualizedText": "<context>
# Section One

Section one introduces the document
</context>


This is the first section content.
",
    "filename": "test.md",
    "text": "
This is the first section content.
",
  },
  {
    "contextualizedText": "<context>
# Section Two

Section two now contains modified content
</context>


This section has been MODIFIED with new content.
",
    "filename": "test.md",
    "text": "
This section has been MODIFIED with new content.
",
  },
  {
    "contextualizedText": "<context>
# Section Three

Section three concludes the document
</context>


This is the third section content.",
    "filename": "test.md",
    "text": "
This is the third section content.",
  },
]
`;
